Java 7 compatibility